--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ gunicorn==20.1.0
 psycopg2-binary==2.9.1
 channels_redis==4.0.0
 python-decouple==3.6
-
+daphne==3.0.2
 djangorestframework~=3.14.0
 asgiref~=3.5.2
