--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -28,8 +28,11 @@ services:
     build: nginx
     volumes:
       - static_volume:/home/app/web/staticfiles
+      - ./nginx/chat-app-cert.pem:/etc/nginx/chat-app-cert.pem
+      - ./nginx/chat-app-key.pem:/etc/nginx/chat-app-key.pem
     ports:
       - "1337:80"
+      - "443:443"
     depends_on:
       - web
 
