--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,20 +2,20 @@ upstream project {
     server web:8000;
 }
 
+upstream websockets {
+   server 127.0.0.1:8001;
+}
+
 server {
 
     listen 80;
 
     location /ws/ {
-        proxy_pass http://project;
+        proxy_pass  http://websockets;
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        proxy_set_header X-Forwarded-Proto http;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
     }
 
     location / {
@@ -37,15 +37,11 @@ server {
     ssl_certificate_key /etc/nginx/chat-app-key.pem;
 
     location /ws/ {
-        proxy_pass http://project;
+        proxy_pass http://websockets;
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
     }
 
     location / {
